# whisky

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  SPEC.md  collection.md  preferences.md  producers.dhall  recommendations.md  tasting-room-cheatsheet.md  whisky-catalogue.cabal  wishlist.md
app/: Main.hs
docs/: collection.md  recommendations.md  wishlist.md
journal/: 2026-02-15-macallan-15.md  2026-05-29-blantons-gold-edition.md  2026-05-29-blantons-original.md  2026-05-29-buffalo-trace.md  2026-05-29-compass-box-hedonism.md  2026-05-29-compass-box-spice-tree.md  2026-05-29-dalwhinnie-15.md  2026-05-29-glenmorangie-duthac.md  2026-05-29-kilchoman-sanaig-cs.md  2026-05-29-oban-14.md  2026-05-29-widow-jane-baby-jane.md  2026-05-29-woodford-double-oaked.md  2026-05-30-compass-box-orangerie.md  2026-05-30-redbreast-12.md  2026-06-01-bains-cape-mountain.md  2026-06-01-compass-box-peat-monster.md  2026-06-08-ardbeg-uigeadail.md  2026-06-08-bains-15-founders.md  README.md  _template.md
notes/: goals.md  preferences.md
reference/: balvenie-25-rare-marriages.dhall  balvenie-french-oak-16.dhall  balvenie-madeira-15.dhall  balvenie-montilla-12.dhall  balvenie-portwood-21.dhall  balvenie-px-18.dhall  balvenie-single-barrel-12.dhall  balvenie-sweet-toast-12.dhall  balvenie-week-of-peat-14.dhall
schema/: Whisky.dhall  producers.dhall
scripts/: cloud-setup.sh
specs/: query-optics.md
src/: Prelude.hs
whiskies/: aberlour-abunadh.dhall  amrut-fusion.dhall  ardbeg-10.dhall  ardbeg-uigeadail.dhall  bains-15-founders.dhall  bains-cape-mountain.dhall  (+57 more)
(+6 files in other folders)
